src/test/deca/context/invalid/created/binary_exp/op_bool/and_A_boolean.deca
// Description :
//    test and entre un A et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: (3.33) Type gauche A. Type droit boolean Type attendu: ‘boolean’
class A{}
{
A a;
boolean b;
boolean c = a && b;
}
